# cmake_demo

./: README.md
first_demo/: CMakeLists.txt  config.h  config.h.in  main.cpp
first_demo/install/include/: config.h
first_demo/my_fun/: CMakeLists.txt  my_fun.cpp  my_fun.h
